Fixed menu button appear behind card on mobile

--- a/css/userSettings.scss
+++ b/css/userSettings.scss
@@ -49,6 +49,7 @@ a.genericButton:hover
     margin: auto;
     padding: 0px;
     padding-left: var( --small-gap);
+    z-index: 1;
 
     height: calc( var( --header-height ) - (var( --small-gap ) * 2) );
     width:  calc( var( --header-height ) - (var( --small-gap ) * 2) );
